--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["{{cookiecutter.author}}"]
 [tool.poetry.dependencies]
 python = "^3.10"
 PyYAML = "^6.0"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
