--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -21,6 +21,7 @@ pre-commit = "^2.19.0"
 pretty-errors = "^1.2.25"
 hypothesis = "^6.48.2"
 pylint = "^2.14.4"
+responses = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
