--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["{{cookiecutter.author}}"]
 python = "^3.10"
 PyYAML = "^6.0"
 requests = "^2.28.1"
+dacite = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
