--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -2,54 +2,70 @@
 name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
 description = ""
-authors = ["{{cookiecutter.author}}"]
+authors = ["Szczerbatybober <szczerbatybober@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-PyYAML = "^6.0"
 requests = "^2.28.1"
-dacite = "^1.6.0"
+loguru = "^0.6.0"
+pydantic = "^1.10.4"
+pyhumps = "^3.8.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.2"
 black = "^22.6.0"
-pyright = "^1.1.256"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
 nox = "^2022.1.7"
 coverage = "^6.4.1"
 pre-commit = "^2.19.0"
 pretty-errors = "^1.2.25"
-hypothesis = "^6.48.2"
+hypothesis = "^6.66.0"
 pylint = "^2.14.4"
 responses = "^0.21.0"
+ruff = "^0.0.240"
+pytest-cov = "^4.0.0"
+pytest-html = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.coverage.paths]
-source = ["{{cookiecutter.project_dir}}"]
+[tool.black]
+line-length = 120
 
-[tool.coverage.run]
-branch = true
-command_line = "-m pytest tests/ --junitxml=test_reports/test-report.xml"
-source = ["{{cookiecutter.project_dir}}"]
-omit = ["{{cookiecutter.project_dir}}/main.py"]
-data_file = "test_reports/.coverage"
+[tool.ruff]
+line-length = 120
 
-[tool.coverage.html]
-directory = "test_reports/covhtml"
-
-[tool.coverage.report]
-show_missing = true
-fail_under = 90
 
 [tool.pyright]
-include = ["{{cookiecutter.project_dir}}", "tests"]
+include = ["{{cookiecutter.project_name}}", "tests"]
 exclude = [
     "**/__pycache__",
     "alembic",
     ".venv"
 ]
-typeCheckingMode = "off"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "-ra",
+    "--html=dist/report.html",
+    "--cov={{cookiecutter.project_name}}",
+    "--cov-report=term-missing",
+    "--cov-report=html:dist/coverage",
+    "-s"
+    ]
+testpaths = [
+    "tests",
+]
+markers = [
+    "smoke",
+    "slow : tests which are slow and can be excluded if speed is needed",
+]
+
+[tool.pylint.messages_control]
+disable = [
+    "missing-function-docstring",
+    "missing-module-docstring",
+    "logging-fstring-interpolation" #TODO review this rule
+]
