--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,12 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  # - repo: https://github.com/psf/black
-  #   rev: 21.12b0
-  #   hooks:
-  #     - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
     hooks:
-      - id: flake8
+      - id: black
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: 'v0.0.191'
+    hooks:
+      - id: ruff
