--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -2,7 +2,7 @@
 name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
 description = ""
-authors = ["Author <{{cookiecutter.email}}>"]
+authors = ["Author <{{cookiecutter.author}}>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
